refactor(catalog): adopt greenfield catalog names
Refs: #494 #826 #829 #832 #847 #852 #854 #855 #858 #886 #890 #892
